fix: updated example URL to use https

--- a/packages/map-core/MapVectorTileLayer.stories.mdx
+++ b/packages/map-core/MapVectorTileLayer.stories.mdx
@@ -196,7 +196,7 @@ MyVictoria uses Mapbox styles but requires some layer specific configuration bef
         },
         methods: {
           getVectorTileWmtsUrl: () => {
-            let path = `http://gis-app-cdn.prod.myvictoria.vic.gov.au/geoserver/gwc/service/wmts`
+            let path = `https://gis-app-cdn.prod.myvictoria.vic.gov.au/geoserver/gwc/service/wmts`
             let queryParams = {
               SERVICE: 'WMTS',
               REQUEST: 'GetTile',
