feat: added map click and feature select events
feat: added support for selected feature styles

feat: added option to enable map popup and customise its content

--- a/packages/map-core/MapVectorLayer.stories.mdx
+++ b/packages/map-core/MapVectorLayer.stories.mdx
@@ -182,6 +182,7 @@ GeoJSON files can be loaded directly from a URL. This examples uses the default 
           :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
           :center="[16138405.843820328, -4552817.013522999]"
           :zoom="1"
+          :enableSelectInteraction="true"
         >
           <yourvic-map-vector-layer
             url="https://openlayers.org/en/latest/examples/data/geojson/countries.geojson"
