--- a/packages/map-core/MapVectorTileLayer.stories.mdx
+++ b/packages/map-core/MapVectorTileLayer.stories.mdx
@@ -250,9 +250,11 @@ Tile Grid. MyVictoria uses Mapbox styles but requires some layer specific config
           :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
           :center="[16138405.843820328, -4552817.013522999]"
           :zoom="11"
+          :popupContentFunction="generatePopupContent"
         >
           <yourvic-map-vector-tile-layer
             :urlFunction="getVectorTileWmsUrl"
+            :enablePopup="true"
             dataFormat="MVT"
             :overlaps="false"
             mapboxStyleMethod="stylefunction"
@@ -304,6 +306,12 @@ Tile Grid. MyVictoria uses Mapbox styles but requires some layer specific config
               }
             }
             return glStyle
+          },
+          generatePopupContent: function (features) {
+            return {
+              title: features[0].get('full_name'),
+              content: 'Population Growth: ' + features[0].get('total_population_growth')
+            }
           }
         }
       }
