--- a/packages/map-core/MapVectorTileLayer.stories.mdx
+++ b/packages/map-core/MapVectorTileLayer.stories.mdx
@@ -174,8 +174,8 @@ MyVictoria uses Mapbox styles but requires some layer specific configuration bef
       {
         components: { YourvicMapCore, YourvicMapTileLayer, YourvicMapVectorTileLayer },
         template: `<yourvic-map-core
-          :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
-          :center="[16138405.843820328, -4552817.013522999]"
+          :containerStyle="containerStyle"
+          :center="center"
           :zoom="11"
         >
           <yourvic-map-vector-tile-layer
@@ -188,6 +188,8 @@ MyVictoria uses Mapbox styles but requires some layer specific configuration bef
         </yourvic-map-core>`,
         data: () => {
           return {
+            containerStyle: { position: 'relative', width: '100%', height:'100vh' },
+            center: [16138405.843820328, -4552817.013522999],
             mapboxStyle: undefined
           }
         },
@@ -247,12 +249,14 @@ Tile Grid. MyVictoria uses Mapbox styles but requires some layer specific config
       {
         components: { YourvicMapCore, YourvicMapTileLayer, YourvicMapVectorTileLayer },
         template: `<yourvic-map-core
-          :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
-          :center="[16138405.843820328, -4552817.013522999]"
+          :containerStyle="containerStyle"
+          :center="center"
           :zoom="11"
+          :popupContentFunction="generatePopupContent"
         >
           <yourvic-map-vector-tile-layer
             :urlFunction="getVectorTileWmsUrl"
+            :enablePopup="true"
             dataFormat="MVT"
             :overlaps="false"
             mapboxStyleMethod="stylefunction"
@@ -262,6 +266,8 @@ Tile Grid. MyVictoria uses Mapbox styles but requires some layer specific config
         </yourvic-map-core>`,
         data: () => {
           return {
+            containerStyle: { position: 'relative', width: '100%', height:'100vh' },
+            center: [16138405.843820328, -4552817.013522999],
             mapboxStyle: undefined
           }
         },
@@ -304,6 +310,12 @@ Tile Grid. MyVictoria uses Mapbox styles but requires some layer specific config
               }
             }
             return glStyle
+          },
+          generatePopupContent: function (features) {
+            return {
+              title: features[0].get('full_name'),
+              content: 'Population Growth: ' + features[0].get('total_population_growth')
+            }
           }
         }
       }
@@ -322,8 +334,8 @@ data sources.
       {
         components: { YourvicMapCore, YourvicMapTileLayer, YourvicMapVectorTileLayer },
         template: `<yourvic-map-core
-          :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
-          :center="[16138405.843820328, -4552817.013522999]"
+          :containerStyle="containerStyle"
+          :center="center"
           :zoom="11"
           enableMapboxWatermark
         >
@@ -336,6 +348,8 @@ data sources.
         </yourvic-map-core>`,
         data: () => {
           return {
+            containerStyle: { position: 'relative', width: '100%', height:'100vh' },
+            center: [16138405.843820328, -4552817.013522999],
             mapboxStyle: undefined,
             attributions: [
               '© <a href="https://www.mapbox.com/about/maps/">Mapbox</a>'
