--- a/packages/map-core/MapVectorLayer.stories.mdx
+++ b/packages/map-core/MapVectorLayer.stories.mdx
@@ -179,16 +179,24 @@ GeoJSON files can be loaded directly from a URL. This examples uses the default 
       {
         components: { YourvicMapCore, YourvicMapTileLayer, YourvicMapVectorLayer },
         template: `<yourvic-map-core
-          :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
-          :center="[16138405.843820328, -4552817.013522999]"
+          :containerStyle="containerStyle"
+          :center="center"
           :zoom="1"
+          :enableSelectInteraction="true"
+          selectedFeatureStyleLabelAttribute="name"
         >
           <yourvic-map-vector-layer
             url="https://openlayers.org/en/latest/examples/data/geojson/countries.geojson"
             dataFormat="GeoJSON"
             labelAttribute="name"
           />
-        </yourvic-map-core>`
+        </yourvic-map-core>`,
+        data: () => {
+          return {
+            containerStyle: { position: 'relative', width: '100%', height:'100vh' },
+            center: [16138405.843820328, -4552817.013522999]
+          }
+        }
       }
     }
   </Story>
@@ -204,10 +212,11 @@ Using a urlFunction which accepts the current map extent, a URL can be generated
       {
         components: { YourvicMapCore, YourvicMapTileLayer, YourvicMapVectorLayer },
         template: `<yourvic-map-core
-          :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
-          :center="[16137905.843820328, -4555057.013522999]"
+          :containerStyle="containerStyle"
+          :center="center"
           :zoom="12"
           :minZoom="10"
+          :enableSelectInteraction="true"
         >
           <yourvic-map-tile-layer
             type="OSM"
@@ -216,8 +225,15 @@ Using a urlFunction which accepts the current map extent, a URL can be generated
             :urlFunction="buildUrl"
             dataFormat="GeoJSON"
             loadingStrategy="bbox"
+            :enablePopup="true"
           />
         </yourvic-map-core>`,
+        data: () => {
+          return {
+            containerStyle: { position: 'relative', width: '100%', height:'100vh' },
+            center: [16137905.843820328, -4555057.013522999]
+          }
+        },
         methods: {
           buildUrl: function (extent, resolution, projection) {
             return 'https://gis-app.prod.myvictoria.vic.gov.au/geoserver/myvic/wfs?SERVICE=wfs&VERSION=1.1.0&REQUEST=GetFeature&TYPENAME=myvic:hospital&SRSNAME=' + projection.getCode() + '&OUTPUTFORMAT=application/json&bbox=' + extent.join(',') + ',' + projection.getCode()
@@ -238,10 +254,11 @@ Using a urlFunction which accepts the tile extent, a URL can be generated to req
       {
         components: { YourvicMapCore, YourvicMapTileLayer, YourvicMapVectorLayer },
         template: `<yourvic-map-core
-          :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
-          :center="[16137905.843820328, -4555057.013522999]"
+          :containerStyle="containerStyle"
+          :center="center"
           :zoom="12"
           :minZoom="10"
+          :enableSelectInteraction="true"
         >
           <yourvic-map-tile-layer
             type="OSM"
@@ -252,6 +269,12 @@ Using a urlFunction which accepts the tile extent, a URL can be generated to req
             loadingStrategy="tile"
           />
         </yourvic-map-core>`,
+        data: () => {
+          return {
+            containerStyle: { position: 'relative', width: '100%', height:'100vh' },
+            center: [16137905.843820328, -4555057.013522999]
+          }
+        },
         methods: {
           buildUrl: function (extent, resolution, projection) {
             return 'https://gis-app.prod.myvictoria.vic.gov.au/geoserver/myvic/wfs?SERVICE=wfs&VERSION=1.1.0&REQUEST=GetFeature&TYPENAME=myvic:pgp_lines&SRSNAME=' + projection.getCode() + '&OUTPUTFORMAT=application/json&bbox=' + extent.join(',') + ',' + projection.getCode()
@@ -273,8 +296,8 @@ alongside a CQL_FILTER (this is not supported by Geoserver).
       {
         components: { YourvicMapCore, YourvicMapTileLayer, YourvicMapVectorLayer },
         template: `<yourvic-map-core
-          :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
-          :center="[16137905.843820328, -4555057.013522999]"
+          :containerStyle="containerStyle"
+          :center="center"
           :zoom="12"
           :minZoom="10"
         >
@@ -287,6 +310,12 @@ alongside a CQL_FILTER (this is not supported by Geoserver).
             loadingStrategy="bbox"
           />
         </yourvic-map-core>`,
+        data: () => {
+          return {
+            containerStyle: { position: 'relative', width: '100%', height:'100vh' },
+            center: [16137905.843820328, -4555057.013522999]
+          }
+        },
         props: {
           filter: {
             default: select('Suburb', {
@@ -317,8 +346,8 @@ This example shows how to use a style function to dynamically set styles based o
       {
         components: { YourvicMapCore, YourvicMapTileLayer, YourvicMapVectorLayer },
         template: `<yourvic-map-core
-          :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
-          :center="[16137905.843820328, -4555057.013522999]"
+          :containerStyle="containerStyle"
+          :center="center"
           :zoom="12"
           :minZoom="10"
         >
@@ -330,6 +359,12 @@ This example shows how to use a style function to dynamically set styles based o
             loadingStrategy="bbox"
           />
         </yourvic-map-core>`,
+        data: () => {
+          return {
+            containerStyle: { position: 'relative', width: '100%', height:'100vh' },
+            center: [16137905.843820328, -4555057.013522999]
+          }
+        },
         props: {
           blueStyle1: {
             default: () => {
@@ -455,8 +490,8 @@ the EsriJSON response and add the features to the vector layer.
       {
         components: { YourvicMapCore, YourvicMapTileLayer, YourvicMapVectorLayer },
         template: `<yourvic-map-core
-          :containerStyle="{ position: 'relative', width: '100%', height:'100vh' }"
-          :center="[16137905.843820328, -4555057.013522999]"
+          :containerStyle="containerStyle"
+          :center="center"
           :zoom="7"
         >
           <yourvic-map-tile-layer
@@ -468,6 +503,12 @@ the EsriJSON response and add the features to the vector layer.
             loadingStrategy="all"
           />
         </yourvic-map-core>`,
+        data: () => {
+          return {
+            containerStyle: { position: 'relative', width: '100%', height:'100vh' },
+            center: [16137905.843820328, -4555057.013522999]
+          }
+        },
         methods: {
           loader: async function (extent, resolution, projection, vectorSource) {
             let serviceUrl = 'https://services5.arcgis.com/ZSYwjtv8RKVhkXIL/ArcGIS/rest/services/Catchments_of_Major_Waterways/FeatureServer/';
